CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(ICMAKER_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/icmaker)

# use this for debugging
#SET(ICMAKER_VERBOSE ON)

# set build type if not already set
IF (NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE Debug)
  #SET(CMAKE_BUILD_TYPE RelWithDebInfo)
  #SET(CMAKE_BUILD_TYPE Release)
ENDIF ()

# enable tests by default
SET(BUILD_TEST 1)

INCLUDE(${ICMAKER_DIRECTORY}/IcMaker.cmake)

ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/packages)
#ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/doc)

IF (EXISTS "${CMAKE_SOURCE_DIR}/script" AND IS_DIRECTORY "${CMAKE_SOURCE_DIR}/script")
  ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/script)
ENDIF ()
